--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,33 @@
 .input {
   width: 100%;
 }
+
+.ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.ulOff {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    list-style: none;
+    font-size: 1.5rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 280px;
+    background-color: #5B11F1;
+    height: 100vh;
+    animation: hamburger-slide 0.5s ease-in-out;
+    z-index: 10000;
+  }
+}
