--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
     top: 0;
     left: 0;
     width: 280px;
-    background-color: #5B11F1;
+    background-color: #5b11f1;
     height: 100vh;
     animation: hamburger-slide 0.5s ease-in-out;
     z-index: 10000;
