--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,6 @@
   margin: auto;
 }
 
-body::before {
-  display: block;
-  content: "";
-  height: 30px;
-}
-
 .faq {
   width: fit-content;
   margin: auto;
@@ -24,10 +18,12 @@ body::before {
   bottom: 0;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+@media screen and (min-width: 40em) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+  }
 }
 
 .input {
